# sxt-proof-of-sql

./: Cargo.toml
crates/david/: Cargo.toml
crates/david/src/: main.rs
crates/proof-of-sql/src/base/database/: column.rs
crates/proof-of-sql/src/proof_primitive/dory/: mod.rs
crates/proof-of-sql/src/sql/proof/: mod.rs
