[package]
name = "david"
edition.workspace = true
exclude.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { workspace = true }
proof-of-sql = { path = "../proof-of-sql", default-features = false, features = ["test"] }